Finalização do exercicio

--- a/Exercicios em Aula/4.1 - Calculadora_Aluguel/build.gradle
+++ b/Exercicios em Aula/4.1 - Calculadora_Aluguel/build.gradle
@@ -15,6 +15,17 @@ plugins
     id 'application'
 }
 
+/*mainClassName = 'App'
+
+// Definindo o diretório source do java
+sourceSets {
+    main {
+        java {
+            srcDir 'src'
+        }
+    }
+}*/
+
 dependencies 
 {
     testCompileOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
